added signup page and updated api

--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,41 @@ button {
   color: red;
   margin-top: 10px;
 }
+
+.links {
+  display: flex;
+  margin-right: 50px;
+  justify-content: end;
+  gap: 30px;
+  list-style: none;
+}
+
+a:-webkit-any-link {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-fields {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-fields label {
+  margin-bottom: 5px;
+}
+
+.form-fields input {
+  padding: 5px;
+}
+
+.form-submit {
+  margin-top: 10px;
+}
